--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -2,12 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="main.css" />
     <title>JSON Prettify</title>
 </head>
-<body>
-    <form method="post" action="jsonpretty" enctype="text/plain">
-        <p><textarea textarea="" rows="30" style="width: 100%;" name="json"></textarea></p>
-        <p><input type="submit" value="Convert"></p>
-    </form>
+<body id="body">
+    <div class="wrapper">
+        Insert your JSON Text here, and click on "Make Pretty". Output will be prettified json.
+        <form method="post" action="jsonpretty" enctype="text/plain">
+            <p><textarea textarea="" rows="30" style="width: 100%;" name="json"></textarea></p>
+            <p><input type="submit" value="Make Prety"></p>
+        </form>
+    </div>
+    <footer class="footer">
+        Source Code <a href="https://github.com/pro-crafting/jsonpretty">Available on github</a>
+    </footer>
 </body>
 </html>
