automaticly focus on the textarea

--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -9,7 +9,7 @@
     <div class="wrapper">
         Insert your JSON Text here, and click on "Make Pretty". Output will be prettified json.
         <form method="post" action="jsonpretty" enctype="text/plain">
-            <p><textarea textarea="" rows="30" style="width: 100%;" name="json"></textarea></p>
+            <p><textarea textarea="" rows="30" style="width: 100%;" name="json" autofocus></textarea></p>
             <p><input type="submit" value="Make Prety"></p>
         </form>
     </div>
