--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -10,7 +10,7 @@
         Insert your JSON Text here, and click on "Make Pretty". Output will be prettified json.
         <form method="post" action="jsonpretty" enctype="text/plain">
             <p><textarea textarea="" rows="30" style="width: 100%;" name="json" autofocus></textarea></p>
-            <p><input type="submit" value="Make Prety"></p>
+            <p><input type="submit" value="Make Pretty"></p>
         </form>
     </div>
     <footer class="footer">
